[package]
name = "buffalo_art"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.*"
rand = "*"

[lib]
name = "buffalo_art"
path = "src/lib.rs"

[[bin]]
name = "dissolve"
path = "src/bin/dissolve.rs"

[[bin]]
name = "line"
path = "src/bin/line.rs"